--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,18 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'ranchoregular';
+    src: url('fonts/rancho-regular-webfont.eot');
+    src: url('fonts/rancho-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/rancho-regular-webfont.woff2') format('woff2'),
+         url('fonts/rancho-regular-webfont.woff') format('woff'),
+         url('fonts/rancho-regular-webfont.ttf') format('truetype'),
+         url('fonts/rancho-regular-webfont.svg#ranchoregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -142,7 +154,7 @@ img {
 }
 
 tr td {
-    padding: 1.2em;
+    padding: 0.5em;
     border: 1px black solid;
     text-align: center;
 }
@@ -176,4 +188,8 @@ button{
     padding: 1em;
     text-align: center;
     color: #fff;
+}
+.nazwa{
+    font-style: italic;
+    font-family: 'ranchoregular';
 }
