--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ body {
     font-size: calc(5% + 1vw + 1vh);
 }
 
+.tekst{
+    font-weight: 600;
+}
+
 html {
     scroll-behavior: smooth;
     font-family: 'muktaregular';
@@ -73,22 +77,26 @@ html {
     background-image: url('../img/produkt1.jpg');
     animation-timing-function: ease-in-out;
 }
+.tlo2{
+    background-color:rgba(80,80,80,.5);;
+}
+
 
 @keyframes slider {
     0% {
-        background-image: url('../img/produkt1.jpg');
+        background-image: url('../img/produkt2.jpg');
     }
     25% {
-        background-image: url('../img/produkt2.jpg');
+        background-image: url('../img/produkt1.jpg');
     }
     50% {
         background-image: url('../img/produkt3.jpg');
     }
     75% {
-        background-image: url('../img/produkt4.jpg');
+        background-image: url('../img/produkt4.png');
     }
     100% {
-        background-image: url('../img/produkt5.jpg');
+        background-image: url('../img/produkt5.png');
     }
 }
 
