--- a/css/style.css
+++ b/css/style.css
@@ -72,9 +72,10 @@ html {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    /* backface-visibility: hidden; */
-    animation: slider 30s linear 0s;
+    backface-visibility: hidden;
+    animation: slider 30s;
     background-image: url('../img/produkt1.jpg');
+    animation-timing-function: ease-in-out;
 }
 .tlo2{
     background-color:rgba(80,80,80,.3);;
