--- a/css/style.css
+++ b/css/style.css
@@ -185,14 +185,14 @@ table {
 
 input {
     width: 100%;
-    padding: 5px;
-    margin: 5px;
+    padding: 0.5em;
+    margin: 0.5em;
 }
 
 textarea {
     width: 100%;
-    padding: 5px;
-    margin: 5px;
+    padding: 0.5em;
+    margin: 0.5em;
     height: 7em;
 }
 
